--- a/website/templates/common/login.html
+++ b/website/templates/common/login.html
@@ -6,6 +6,6 @@ href="{{ url_for('static', filename='css/login.css') }}"
 {% block header %}{% include "common/header.html" %} {% endblock %}
 {% block content %} 
     <div>
-        YAWA TANG ENA
+        YAWA TANG ENA DOEL PALAIYOT
     </div>
 {% endblock %}
