--- a/website/templates/common/login.html
+++ b/website/templates/common/login.html
@@ -1,11 +1,68 @@
 {% extends "common/base.html" %}
 {% block link %}
-href="{{ url_for('static', filename='css/login.css') }}"
+<link href="./img/logo/logo.png" rel="icon">
+<link rel=stylesheet href="{{ url_for('static', filename='./css/login.css') }}" />
+<link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 {% endblock %}
 {% block title %}Login{% endblock %}
 {% block header %}{% include "common/header.html" %} {% endblock %}
 {% block content %} 
     <div>
-        YAWA TANG ENA DOEL PALAIYOT
+        <!-- Login Content -->
+        <div class="container-login">
+            <div class="row justify-content-center">
+                <div class="col-xl-10 col-lg-12 col-md-9">
+                    <div class="card shadow-sm my-5">
+                        <div class="card-body p-0">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <div class="login-form">
+                                        <h5 align="center">ATTENDANCE SYSTEM</h5>
+                                        <div class="text-center">
+                                            <img src="./img/logo/logo.png" style="width:100px;height:100px">
+                                            <br><br>
+                                            <h1 class="h4 text-gray-900 mb-4">Login Panel</h1>
+                                        </div>
+                                        <form class="user" method="Post" action="">
+                                            <div class="form-group">
+                                                <select required name="userType" class="form-control mb-3">
+                                                    <option value="">--Select User Roles--</option>
+                                                    <option value="Administrator">Administrator</option>
+                                                    <option value="ClassTeacher">ClassTeacher</option>
+                                                </select>
+                                            </div>
+                                            <div class="form-group">
+                                                <input type="text" class="form-control" required name="username" id="exampleInputEmail" placeholder="Enter Email Address">
+                                            </div>
+                                            <div class="form-group">
+                                                <input type="password" name="password" required class="form-control" id="exampleInputPassword" placeholder="Enter Password">
+                                            </div>
+                                            <div class="form-group">
+                                                <div class="custom-control custom-checkbox small" style="line-height: 1.5rem;">
+                                                    <input type="checkbox" class="custom-control-input" id="customCheck">
+                                                    <!-- <label class="custom-control-label" for="customCheck">Remember
+                                Me</label> -->
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <input type="submit" class="btn btn-success btn-block" value="Login" name="login" />
+                                            </div>
+                                        </form>
+                                    <div class="text-center">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
+{% block scripts %}
+<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+<script src="js/ruang-admin.min.js"></script>
+{% endblock %}
+
